--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
-  margin: .5rem;
+  margin: .4rem;
   border-radius: 2rem;
 }
 
@@ -62,7 +62,7 @@
 
 @media (min-width: 768px) {
   .sorting-container {
-    margin: 1rem 0;
+    margin: .5rem 0;
   }
 
   .dropdown-list-container {
